# pitching_mechanics

./: .gitignore  CLAUDE.md  IDEAS.md  IDEAS_research.md  MUJOCO_LOG.TXT  README.md  TO_DO.txt  pyproject.toml  requirements.txt
pitching_mechanics/: __init__.py  build_pitcher_fullbody.py  eval_policy.py  pitch_env.py  replay_pitcher_fullbody.py  site_ik.py  train_ppo.py  trajectory.py
pitching_mechanics/logs/: torques_1623_3.csv
pitching_mechanics/models/: pitcher_fullbody_1623_3.xml
pitching_mechanics/obp/: __init__.py  full_sig.py  inspect_pitch.py
pitchlens/: __init__.py  config.py  constants.py
pitchlens/analytics/: __init__.py  base_model.py  chain_models.py  peer_match.py  scoring.py  scoring_config.py  velo_model.py
pitchlens/cv/: event_detection.py  pose_pipeline.py
pitchlens/dashboard/: app.py  charts.py  config.toml  styles.css
pitchlens/dashboard/sections/: __init__.py  coaching_language.py  injury_risk.py  joint_moments.py  kinematic_profile.py  kinetic_chain.py  mechanic_scores.py  peer_comps.py  velocity_diagnostic.py
pitchlens/data/: __init__.py  full_sig_moments.py  obp_fullsig.py  poi_metrics.py
pitchlens/simulation/: ball_flight.py  build_pitcher_fullbody.py  replay_pitcher_fullbody.py  trajectory.py
tests/: conftest.py  test_data.py  test_peer_match.py  test_scoring.py
