[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pitchlens"
version = "0.1.0"
description = "Pitching mechanics analysis built on the Driveline OpenBiomechanics Project"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "shap>=0.45",
    "streamlit>=1.32",
    "plotly>=5.18",
    "joblib>=1.3",
]

[project.optional-dependencies]
cv = ["mediapipe>=0.10", "opencv-python>=4.9"]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["pitchlens*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
